--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,5 +10,15 @@
 
 <%= yield %>
 
+<main role='main'>
+  <div class='container'>
+    <% flash.each do |name, msg| %>
+      <div class='alert alert-<%= "#{name}" %>'>
+        <a href='#' class='close' data-dismiss='alert &#215;'></a>
+        <%= content_tag :div, msg, :id => "flash_#{name}" if msg.is_a?(String) %>
+      </div>
+    <% end %>
+  </div>
+</main>
 </body>
 </html>
