--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,17 +8,36 @@
 </head>
 <body>
 
-<%= yield %>
-
-<main role='main'>
-  <div class='container'>
-    <% flash.each do |name, msg| %>
-      <div class='alert alert-<%= "#{name}" %>'>
-        <a href='#' class='close' data-dismiss='alert &#215;'></a>
-        <%= content_tag :div, msg, :id => "flash_#{name}" if msg.is_a?(String) %>
+  <header>
+    <nav role='navigation' class='navbar navbar-default'>
+      <div class='container'>
+        <div class='navbar-header'>
+          <button type="button" class='navbar-toggle' data-toggle='collapse' data-target="">
+            <span class='icon-bar'></span>
+            <span class='icon-bar'></span>
+            <span class='icon-bar'></span>
+          </button>
+          <%= link_to "Bookstore App", "#", class: "navbar-brand" %>
+        </div>
+        <div class='navbar-collapse collapse'>
+          <ul class="nav navbar-nav">
+            <li><%= link_to "Home", "#" %></li>
+          </ul>
+        </div>
       </div>
-    <% end %>
-  </div>
-</main>
+    </nav>
+  </header>
+<%= yield %>
+  <main role='main'>
+    <div class='container'>
+      <% flash.each do |name, msg| %>
+        <div class='alert alert-<%= "#{name}" %>'>
+          <a href='#' class='close' data-dismiss='alert &#215;'></a>
+          <%= content_tag :div, msg, :id => "flash_#{name}" if msg.is_a?(String) %>
+        </div>
+      <% end %>
+    </div>
+  </main>
+
 </body>
 </html>
