--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <header>
+  <header role='banner'>
     <nav role='navigation' class='navbar navbar-default'>
       <div class='container'>
         <div class='navbar-header'>
@@ -21,7 +21,9 @@
         </div>
         <div class='navbar-collapse collapse'>
           <ul class="nav navbar-nav">
-            <li><%= link_to "Home", "#" %></li>
+            <li><%= link_to "Home", root_path %></li>
+            <li><%= link_to "Authors", authors_path %></li>
+
           </ul>
         </div>
       </div>
